# pre-commit-psscriptanalyzer

./: .pre-commit-hooks.yaml  README.md  setup.cfg
pre_commit_hooks/: psscriptanalyzer.py
