[metadata]
name = pre_commit_hooks
version = 0.0.3
description = pre-commit python wrapper for PSScriptAnalyzer
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jepper/pre-commit-psscriptanalyzer
author = Jesper Markenstam
author_email = jespmark@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    tomli>=1.1.0;python_version<"3.11"
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    psscriptanalyzer = pre_commit_hooks.psscriptanalyzer:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
